zdroje btc ve frontendu

--- a/application/webpage/static/index.html
+++ b/application/webpage/static/index.html
@@ -15,7 +15,7 @@
 
 				<div id="address-input"  class="first">
 					<br><br><br><br><br>
-					<b> ***** Bitcoin investigation tool  ***** </b> <br><br><br><br><br>
+					<b> ***** Bitcoin investigation tool  ***** </b> <br>
 					Enter bitcoin address or nickname:<br>
 						<form action="/index.html" method="post">
 						<input type="text" name="searched_address" size="34" id="searched_address" placeholder="14BzdTwZyJTWewiZdYMGafiNUxmSYm9K91">
