--- a/application/webpage/static/index.html
+++ b/application/webpage/static/index.html
@@ -14,7 +14,7 @@
 			<div class="container">
 
 				<div id="address-input"  class="first">
-					<br><br><br><br><br>
+					<br><br>
 					<b> ***** Bitcoin investigation tool  ***** </b> <br>
 					Enter bitcoin address or nickname:<br>
 						<form action="/index.html" method="post">
@@ -44,6 +44,7 @@
 
 				<div id="BTC sources"  class="fourth">
 					<div id="pieChart"></div>
+					<div id="pieChart2"></div>
 				</div>
 
 				<div id="identities"  class="last">
